# SimplicityX

./: CMakeLists.txt  README.md  SimplicityXConfig.cmake  build.bat
include/: raylib.h
src/: library.c  library.h
